# Aimont

./: LICENSE  README.md  README_EN.md  agent.md  pyproject.toml
.github/workflows/: ci.yml
core/: pyproject.toml
core/src/aimont/: __init__.py  __main__.py  auth.py  cli.py  codex_probe.py  config.py  message_cache.py  models.py  rules.py  server.py  session_registry.py  state_machine.py
core/src/aimont/transports/: __init__.py  base.py  push.py  terminal.py  webhook.py  websocket.py
core/src/claude_recall/: __init__.py  __main__.py  auth.py  cli.py  config.py  message_cache.py  models.py  rules.py  server.py  session_registry.py  state_machine.py
core/src/claude_recall/transports/: __init__.py  base.py  push.py  terminal.py  websocket.py
core/tests/: conftest.py  helpers.py  test_app_startup_teardown.py  test_cascade_integration.py  test_cli_daemon.py  test_cli_daemon_unreachable.py  test_cli_join.py  test_cli_port_validation.py  test_cli_version.py  test_cli_watch_format.py  test_cli_watch_unreachable.py  test_cli_watch_validation.py  test_codex_cli_detection.py  test_codex_probe.py  test_config_errors.py  test_config_path.py  test_emit_hook.py  test_frame_schema.py  test_host_config.py  test_ingest_endpoint.py  test_ingest_env_config.py  test_message_cache.py  test_parse_ingest_frame.py  test_push_env_config.py  test_push_token_config.py  test_push_transport.py  test_rules.py  test_server.py  test_session_registry.py  test_state_machine.py  test_terminal_transport.py  test_token_codec.py  test_version.py  test_webhook_transport.py  test_websocket_transport.py
docs/: multi-host-roadmap.md  multi-host.md  protocol.md
hooks/: codex.settings.template.json  emit.py  install.sh  settings.template.json
receivers/web-dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
receivers/web-dashboard/src/: App.tsx  HostBar.tsx  Legend.tsx  ShopWindow.tsx  app.test.tsx  format.test.ts  hostbar.test.tsx  index.css  lastseen.test.ts  presence.test.ts  shopwindow.test.tsx  statecolor.test.ts  test-setup.ts  types.test.ts  types.ts  useRecall.test.tsx  useRecall.ts
