[project]
name = "aimont-workspace"
version = "0.1.0"
description = "Aimont monorepo workspace"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "aimont",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.uv.sources]
aimont = { workspace = true }

[tool.uv.workspace]
members = ["core"]

[tool.mypy]
# Type-check the library source. Tests are excluded for now — they lean on
# dynamic fixtures and would need broader annotation before passing cleanly.
files = ["core/src/aimont"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["core/tests"]
# Treat warnings as errors so deprecations in our own code fail loudly.
# The ignores below are known upstream noise from uvicorn's bundled
# websockets integration (uvicorn still imports websockets.legacy); they
# are outside our control and drop off when uvicorn migrates. Keep this
# list tight — a new warning here should be a signal, not silenced.
filterwarnings = [
    "error",
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
    "ignore:remove second argument of ws_handler:DeprecationWarning",
]
