[project]
name = "aimont-workspace"
version = "0.1.0"
description = "Aimont monorepo workspace"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "aimont",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.uv.sources]
aimont = { workspace = true }

[tool.uv.workspace]
members = ["core"]

[tool.mypy]
# Type-check the library source. Tests are excluded for now — they lean on
# dynamic fixtures and would need broader annotation before passing cleanly.
files = ["core/src/aimont"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["core/tests"]
# Treat warnings as errors so deprecations in our own code fail loudly.
# The daemon and the test uvicorn servers select ws="websockets-sansio",
# avoiding uvicorn's deprecated websockets.legacy path — so no ignores are
# needed here. A new warning should be a signal, not silenced.
filterwarnings = [
    "error",
]
