[project]
name = "aimont-workspace"
version = "0.1.0"
description = "Aimont monorepo workspace"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "aimont",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.uv.sources]
aimont = { workspace = true }

[tool.uv.workspace]
members = ["core"]

[tool.mypy]
# Type-check the library source. Tests are excluded for now — they lean on
# dynamic fixtures and would need broader annotation before passing cleanly.
files = ["core/src/aimont"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["core/tests"]
# Treat warnings as errors so deprecations in our own code fail loudly.
# The daemon and the test uvicorn servers select ws="websockets-sansio",
# avoiding uvicorn's deprecated websockets.legacy path — so no ignores are
# needed here. A new warning should be a signal, not silenced.
#
# The two ResourceWarning ignores below are the sole exception: pytest_asyncio
# leaves its per-test event loops (and their selector sockets) unclosed at
# teardown, and CPython only emits the ResourceWarning when the garbage
# collector reclaims them. With `error` alone, that GC can land during session
# teardown, where pytest's unraisableexception plugin wraps it into a fatal
# ExceptionGroup — a flaky, GC-timing-dependent failure unrelated to our code.
# Scope the ignore tightly to the unclosed-loop/socket messages so genuine
# ResourceWarnings from aimont still fail the build.
filterwarnings = [
    "error",
    "ignore:unclosed event loop:ResourceWarning",
    "ignore:unclosed <socket:ResourceWarning",
]
